fixed password lenth input area

--- a/Random Password Generator/index.html
+++ b/Random Password Generator/index.html
@@ -27,7 +27,7 @@
                 <h3>
                     Enter Your password length
                 </h3>
-                <input class="1" type="number" id="n1" placeholder="enter value greater than 0" value="" min="1"
+                <input class="1" type="number" id="n1" placeholder="enter value between 1 and 20" value="" min="1"
                     max="20">
             </div>
             <div class="passwordtype">
