--- a/index.html
+++ b/index.html
@@ -553,9 +553,10 @@
         <div class="sidebar-section">
           <h3 class="sidebar-title"><i class="fas fa-trophy"></i>Awards & Certifications</h3>
           <ul class="sidebar-list">
-            <li>RAISE Award (Infosys): Exceptional performance & ownership</li>
+	    <li>INSTA Award (Infosys): Exceptional performance & ownership</li>
+            <li>RAISE Award (Infosys): Recognized for high-impact contributions</li>
             <li>Best Performer Award: Automation excellence</li>
-            <li>Infosys Certified Java Developer</li>
+            <li>Best Performer Award: Automation & Deployment Excellence</li>
           </ul>
         </div>
       </aside>
