Awards and certification

--- a/index.html
+++ b/index.html
@@ -555,8 +555,8 @@
           <ul class="sidebar-list">
 	    <li>INSTA Award (Infosys): Exceptional performance & ownership</li>
             <li>RAISE Award (Infosys): Recognized for high-impact contributions</li>
-            <li>Best Performer Award: Automation excellence</li>
             <li>Best Performer Award: Automation & Deployment Excellence</li>
+            <li>Infosys Certified Java Developer</li>
           </ul>
         </div>
       </aside>
