--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
       <section class="section">
         <h2 class="section-title"><i class="fas fa-code"></i>Technical Skills</h2>
         <div class="skills-container">
-          <span class="skill-tag featured">Java (Core & Advanced)</span>
+          <span class="skill-tag featured">Java (Core, Advanced, 8, 17)</span>
           <span class="skill-tag featured">Spring Boot</span>
           <span class="skill-tag featured">Spring Data JPA</span>
           <span class="skill-tag featured">MySQL</span>
@@ -649,3 +649,4 @@
   </div>
 </body>
 </html>	
+
